<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <ImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profileImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_add_pic"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview"/>

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"/>

            <EditText
                android:id="@+id/edit_product_provider"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_provider"
                android:inputType="textCapWords"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="0dp">

                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    />

                <TextView
                    android:id="@+id/label_price_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_product_price"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/stock"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/quantity_remains"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                android:hint="@string/number"
                android:inputType="number"
                android:maxLength="8"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_cal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/modification"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/increase_bu"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:text="+"/>

            <Button
                android:id="@+id/decrease_bu"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:text="-"/>

            <EditText
                android:id="@+id/edit_mod_by"
                style="@style/EditorFieldStyle"
                android:hint="@string/number"
                android:inputType="number"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/order_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order More"/>

</LinearLayout>
